--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "DFT organizer with error parsing and archiving"
 authors = [{ name = "Alina Zhidkovskaya", email = "alina@mpds.io" }]
 dependencies = [
-    "click>=8.1"
+    "click>=8.1",
+    "pycrystal",
+    "ase-fleur @ git+https://github.com/blokhin/ase-fleur", # 0.0.2a patch
 ]
 requires-python = ">=3.11"
 
